--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "build": "tsc",
     "start": "npm run build && node dist/src/index.js",
+    "lint": "eslint src/**/*.ts",
+    "lint-fix": "eslint ./src ./test --ext .ts --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Victor Henzzo",
@@ -16,6 +18,9 @@
   },
   "devDependencies": {
     "@types/module-alias": "^2.0.4",
-    "@types/node": "^20.12.7"
+    "@types/node": "^20.12.7",
+    "@typescript-eslint/eslint-plugin": "^7.7.0",
+    "@typescript-eslint/parser": "^7.7.0",
+    "eslint": "^8.57.0"
   }
 }
