--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "npm run build && node dist/src/index.js",
+    "start-dev": "ts-node-dev 'src/index.ts'",
     "lint": "eslint src/**/*.ts",
     "lint-fix": "eslint ./src ./test --ext .ts --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -21,6 +22,7 @@
     "@types/node": "^20.12.7",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
-    "eslint": "^8.57.0"
+    "eslint": "^8.57.0",
+    "ts-node-dev": "^2.0.0"
   }
 }
