--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "build": "tsc",
     "start": "npm run build && node dist/src/index.js",
     "start-dev": "ts-node-dev 'src/index.ts'",
-    "lint": "eslint \"src/**/*.ts\" \"test/**/*.ts\"",
+    "lint": "eslint 'src/**/*.ts' 'test/**/*.ts'",
     "lint-fix": "eslint ./src ./test --ext .ts --fix",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "test-functional": "jest --projects ./test --runInBand"
+    "test-functional": "jest --projects ./test --runInBand",
+    "style-check": "prettier --check 'src/**/*.ts' 'test/**/*.ts'",
+    "style-fix": "prettier --write 'src/**/*.ts' 'test/**/*.ts'"
   },
   "author": "Victor Henzzo",
   "license": "ISC",
@@ -31,6 +33,7 @@
     "@typescript-eslint/parser": "^7.7.0",
     "eslint": "^8.57.0",
     "jest": "^29.7.0",
+    "prettier": "^3.2.5",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
     "ts-node-dev": "^2.0.0"
