--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start-dev": "ts-node-dev 'src/index.ts'",
     "lint": "eslint 'src/**/*.ts' 'test/**/*.ts'",
     "lint-fix": "eslint ./src ./test --ext .ts --fix",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "test-functional": "jest --projects ./test --runInBand",
     "style-check": "prettier --check 'src/**/*.ts' 'test/**/*.ts'",
     "style-fix": "prettier --write 'src/**/*.ts' 'test/**/*.ts'"
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "@overnightjs/core": "^1.7.6",
+    "axios": "^1.6.8",
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "module-alias": "^2.2.3",
