--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "alwaysStrict": true,
     "removeComments": true,
     "noImplicitReturns": true,
+
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
@@ -27,5 +28,8 @@
     "emitDecoratorMetadata": true
   },
   "include": ["./src/**/*.ts", "./test/**/*.ts"],
-  "exclude": ["./node_modules/*", "dist"]
+  "exclude": ["./node_modules/*", "dist"],
+  "typeAcquisition": {
+    "enable": true
+  }
 }
