--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@overnightjs/core": "^1.7.6",
     "axios": "^1.6.8",
     "body-parser": "^1.20.2",
+    "config": "^3.3.11",
     "express": "^4.19.2",
     "module-alias": "^2.2.3",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
+    "@types/config": "^3.3.4",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/module-alias": "^2.0.4",
